--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -1,4 +1,5 @@
 @import '../node_modules/bulma/bulma.sass';
+//@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
 
 @tailwind base;
 @tailwind components;
