--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -45,3 +45,8 @@ body {
   display: inline-block;
   vertical-align: middle;
 }
+
+.trip-box {
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+}
