--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -58,7 +58,8 @@ body {
   padding: 10px;
 }
 
-//#search-form {
-//  display: flex;
-//  flex-direction: row;
-//}
+.open-trip {
+  border-radius: 25px;
+  border: 1px solid #8F1136;
+  background: crimson;
+}
