--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -49,7 +49,14 @@ body {
 .trip-box {
   border-radius: 25px;
   border: 2px solid #73AD21;
-  width: 80%
+  width: 100%;
+}
+
+#trips-box {
+  height: 80%;
+  border: 2px solid #7321AD;
+  padding: 10px;
+  border-radius: 25px;
 }
 
 #trip-container {
@@ -62,4 +69,5 @@ body {
   border-radius: 25px;
   border: 1px solid #8F1136;
   height: 100%;
+  padding: 10px;
 }
