--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -1,4 +1,5 @@
 @import '../node_modules/bulma/bulma.sass';
+
 //@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
 
 @tailwind base;
@@ -54,7 +55,7 @@ body {
 }
 
 #trips-box {
-  height: 80%;
+  //height: 80%;
   //border: 2px solid #7321AD;
   padding: 10px;
   border-radius: 25px;
@@ -99,4 +100,9 @@ body {
   //height: 100%;
   height: 40px;
   margin-left: 10px;
+}
+
+.divider {
+  border-bottom: 1px solid #bbb;
+  padding: 10px;
 }
