--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -105,4 +105,13 @@ body {
 .divider {
   border-bottom: 1px solid #bbb;
   padding: 10px;
+  margin-bottom: 10px;
+}
+
+.city {
+  color: black !important;
+}
+
+.upper.level {
+  //padding: 10px 0 10px 0;
 }
