--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -95,6 +95,12 @@ body {
   margin-bottom: 0 !important;
 }
 
+.lower-inner {
+  border-left: 2px solid gray;
+  margin-left: 10px;
+  padding-left: 10px;
+}
+
 .vl {
   border-left: 2px solid gray;
   //height: 100%;
