--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -130,3 +130,26 @@ body {
 .price-grouping:hover {
   border: 1px solid dodgerblue;
 }
+
+#canvas {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+#alone-searchbar {
+  position: absolute;
+  top: 40%;
+  left: 25%;
+  z-index: 1;
+  width: 70%;
+}
+
+#trip-view {
+  height: 100%;
+  position: relative
+}
+
+#search-form {
+  width: 80%;
+}
