--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -122,14 +122,14 @@ body {
   //padding: 10px 0 10px 0;
 }
 
-.price-grouping {
-  border-radius: 10px;
-  padding: 3px;
-}
-
-.price-grouping:hover {
-  border: 1px solid dodgerblue;
-}
+//.price-grouping {
+//  border-radius: 10px;
+//  padding: 3px;
+//}
+//
+//.price-grouping:hover {
+//  border: 1px solid dodgerblue;
+//}
 
 #canvas {
   z-index: -1;
@@ -152,4 +152,8 @@ body {
 
 #search-form {
   width: 80%;
+}
+
+.price-picker:hover {
+  filter: brightness(85%);
 }
