--- a/is-eurail-cheaper/animation-testing/main.css
+++ b/is-eurail-cheaper/animation-testing/main.css
@@ -1,47 +1,72 @@
-@keyframes flipInX {
+@keyframes backwards {
     from {
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-        animation-timing-function: ease-in;
-        opacity: 0;
+        transform: perspective(400px) rotate3d(1, 0, 0, 180deg);
+        animation-timing-function: ease-in-out;
+        /*opacity: 0.5;*/
     }
 
-    40% {
-        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-        animation-timing-function: ease-in;
-    }
+    /*60% {*/
+    /*    transform: perspective(400px) rotate3d(1, 0, 0, -30deg);*/
+    /*    animation-timing-function: ease-in-out;*/
+    /*}*/
 
-    60% {
-        transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
-        opacity: 1;
-    }
-
-    80% {
-        transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
-    }
+    /*80% {*/
+    /*    transform: perspective(400px) rotate3d(1, 0, 0, 20deg);*/
+    /*    animation-timing-function: ease-in-out;*/
+    /*}*/
 
     to {
-        transform: perspective(400px);
+        transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
     }
 }
 
-.flipInX {
+@keyframes forwards {
+    from {
+        transform: perspective(400px) rotate3d(1, 0, 0, -180deg);
+        animation-timing-function: ease-in-out;
+        /*opacity: 0.5;*/
+    }
+
+    /*60% {*/
+    /*    transform: perspective(400px) rotate3d(1, 0, 0, 30deg);*/
+    /*    animation-timing-function: ease-in-out;*/
+    /*}*/
+
+    /*80% {*/
+    /*    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);*/
+    /*    animation-timing-function: ease-in-out;*/
+    /*}*/
+
+    to {
+        transform: perspective(400px)
+        /*rotate3d(1, 0, 0, -10deg);*/
+    }
+}
+
+.backwards {
+    animation-name: backwards;
+}
+
+.forwards {
+    animation-name: forwards;
+}
+
+.flip {
     backface-visibility: visible !important;
-    animation-name: flipInX;
-}
-
-@media print, (prefers-reduced-motion: reduce) {
-    .animated {
-        animation-duration: 1ms !important;
-        transition-duration: 1ms !important;
-        animation-iteration-count: 1 !important;
-    }
-
-    .animated[class*='Out'] {
-        opacity: 0;
-    }
+    transform-origin: 0 0 0;
 }
 
 .animated {
     animation-duration: 1s;
     animation-fill-mode: both;
+}
+
+.none {
+    /*display: none;*/
+    /*background-color: #8F1136;*/
+    position: absolute;
+}
+
+.parent {
+    line-height: 0;
 }
