--- a/is-eurail-cheaper/animation-testing/main.css
+++ b/is-eurail-cheaper/animation-testing/main.css
@@ -1,45 +1,20 @@
 @keyframes backwards {
     from {
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        transform: rotateX(90deg);
         animation-timing-function: ease-in-out;
-        /*opacity: 0.5;*/
     }
 
-    /*60% {*/
-    /*    transform: perspective(400px) rotate3d(1, 0, 0, -30deg);*/
-    /*    animation-timing-function: ease-in-out;*/
-    /*}*/
-
-    /*80% {*/
-    /*    transform: perspective(400px) rotate3d(1, 0, 0, 20deg);*/
-    /*    animation-timing-function: ease-in-out;*/
-    /*}*/
-
     to {
-        transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
     }
 }
 
 @keyframes forwards {
     from {
-        transform: perspective(400px) rotate3d(1, 0, 0, -90deg);
+        transform: rotateX(-90deg);
         animation-timing-function: ease-in-out;
-        /*opacity: 0.5;*/
     }
 
-    /*60% {*/
-    /*    transform: perspective(400px) rotate3d(1, 0, 0, 30deg);*/
-    /*    animation-timing-function: ease-in-out;*/
-    /*}*/
-
-    /*80% {*/
-    /*    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);*/
-    /*    animation-timing-function: ease-in-out;*/
-    /*}*/
-
     to {
-        transform: perspective(400px)
-        /*rotate3d(1, 0, 0, -10deg);*/
     }
 }
 
@@ -53,20 +28,20 @@
 
 .flip {
     backface-visibility: visible !important;
-    transform-origin: 0 0 0;
+    transform-origin: top !important;
 }
 
 .animated {
-    animation-duration: 0.3s;
+    animation-duration: 1s;
     animation-fill-mode: both;
 }
 
 .none {
-    /*display: none;*/
-    /*background-color: #8F1136;*/
-    position: absolute;
+    position: relative;
 }
 
 .parent {
     line-height: 0;
+    display: flex;
+    flex-direction: column;
 }
