--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -1,5 +1,7 @@
 @import '../node_modules/bulma/bulma.sass';
 
+@import './animation.scss';
+
 //@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
 
 @tailwind base;
