--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -30,7 +30,27 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  //height: 100%;
+  //margin: 0;
 }
+
+//#main {
+//  //display: flex;
+//  //flex-direction: column;
+//  height: 100%;
+//}
+//
+//#container {
+//  display: flex;
+//  height: 50vh;
+//  overflow: none;
+//  //flex-grow: 1;
+//  //height: 90vh;
+//}
+//
+//#navbar {
+//  height: 50px;
+//}
 
 #map {
   flex: 7;
