--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -1,5 +1,8 @@
 @import '../node_modules/bulma/bulma.sass';
 
+@import "leaflet/dist/leaflet.css";
+
+
 @import './animation.scss';
 
 //@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
