--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -92,3 +92,42 @@
   //transition: transform 0.3s ease-out;
   max-height: 100px !important;
 }
+
+@keyframes scaleIn {
+  from {
+    transform: scale(0.2, 0.2);
+    opacity: 1;
+  }
+  to {
+    transform: scale(2.5, 2.5);
+    opacity: 0;
+  }
+}
+
+#circle-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  //overflow: hidden;
+  position: relative;
+}
+
+.circle {
+  position: absolute;
+  border-radius: 50%;
+  //background-color: deepskyblue;
+  border: 1px solid deepskyblue;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+  animation: scaleIn 4s infinite; // cubic-bezier(.36, .11, .89, .32);
+}
+
+.item {
+  z-index: 1;
+  border-radius: 50%;
+  //border: 1px solid red;
+  background-color: red;
+  width: 10px;
+  height: 10px;
+}
