--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -128,6 +128,36 @@
   border-radius: 50%;
   //border: 1px solid red;
   background-color: red;
+  //width: 30px;
+  //height: 30px;
+
+  align-items: center;
+  //background-color: #FFFFFF;
+  //border-radius: 50%;
+  color: #263238;
+  display: flex;
+  font-size: 14px;
+  gap: 15px;
   width: 10px;
   height: 10px;
+  justify-content: center;
+  padding: 4px;
+  position: relative;
+  //position: relative;
+  //transition: all 0.3s ease-out;
+}
+
+.item::after {
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 3px solid red;
+  content: '';
+  height: 0;
+  left: 50%;
+  position: absolute;
+  top: 90%;
+  transform: translate(-50%, 0);
+  //transition: all 0.3s ease-out;
+  width: 0;
+  z-index: 1;
 }
