--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -110,6 +110,7 @@
   justify-content: center;
   //overflow: hidden;
   position: relative;
+  transform: translate(0, 50%);
 }
 
 .circle {
@@ -143,21 +144,22 @@
   justify-content: center;
   padding: 4px;
   position: relative;
+
   //position: relative;
   //transition: all 0.3s ease-out;
 }
 
-.item::after {
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  border-top: 3px solid red;
-  content: '';
-  height: 0;
-  left: 50%;
-  position: absolute;
-  top: 90%;
-  transform: translate(-50%, 0);
-  //transition: all 0.3s ease-out;
-  width: 0;
-  z-index: 1;
-}
+//.item::after {
+//  border-left: 3px solid transparent;
+//  border-right: 3px solid transparent;
+//  border-top: 3px solid red;
+//  content: '';
+//  height: 0;
+//  left: 50%;
+//  position: absolute;
+//  top: 90%;
+//  transform: translate(-50%, 0);
+//  //transition: all 0.3s ease-out;
+//  width: 0;
+//  z-index: 1;
+//}
