--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -135,7 +135,7 @@
   width: 50px;
   height: 50px;
   opacity: 0;
-  animation: scaleIn 4s infinite; // cubic-bezier(.36, .11, .89, .32);
+  animation: scaleIn 4s infinite cubic-bezier(0.07, 0.91, 1, 1.81);
 }
 
 .item {
