--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -248,3 +248,13 @@ body {
 .cheapest-time:after {
   left: 101px !important;
 }
+
+#eurail-sum:hover:after {
+  width: 50px;
+  height: 20px;
+  content: attr(data-p1);
+  background-color: #73AD21;
+  position: relative;
+  top: 50px;
+  left: 0px;
+}
