--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -181,12 +181,19 @@ body {
   height: 100%;
 }
 
+#alone-text {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  z-index: 1;
+}
+
 #alone-searchbar {
   position: absolute;
   top: 30%;
   left: 25%;
   z-index: 1;
-  //width: 70%;
+  width: 295px;
 }
 
 #search-form {
