--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -171,8 +171,20 @@
   transition: all 0.5s ease-in-out;
 }
 
-.fading {
-    //animation: fading 0.5s;
+.fade-out {
   opacity: 0;
   transition: opacity 0.5s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fade-in 0.5s;
 }
