--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -171,11 +171,6 @@
   transition: all 0.5s ease-in-out;
 }
 
-.fade-out {
-  opacity: 0;
-  transition: opacity 0.5s;
-}
-
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -187,4 +182,9 @@
 
 .fade-in {
   animation: fade-in 0.5s;
+}
+
+.fade-out {
+  opacity: 0;
+  animation: fade-in reverse 0.2s;
 }
