--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -67,6 +67,7 @@ body {
   flex: 3;
   box-shadow: -20px 6px 10px 5px rgba(0, 0, 0, 0.1215686275);
   z-index: 100;
+  position: relative;
 }
 
 #container {
@@ -176,9 +177,12 @@ body {
 //}
 
 #canvas {
-  z-index: -1;
-  //width: 100%;
+  //z-index: -1;
+  width: 100%;
   height: 100%;
+  position: absolute;
+  //top: 5%;
+  //left: 50%;
 }
 
 #alone-text {
@@ -297,4 +301,9 @@ body {
 
 .has-tooltip-bottom:hover .tooltip {
   visibility: visible;
+}
+
+.above {
+  z-index: 2000;
+  position: relative;
 }
