--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -171,7 +171,7 @@ body {
 .city {
   border-radius: 25px;
   padding: 0 5px;
-  border: 1px solid red;
+  //border: 1px solid red;
 }
 
 .upper.level {
