--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -188,8 +188,11 @@ body {
 
 #canvas {
   //z-index: -1;
+  //width: 450px;
+  //height: 700px;
   width: 100%;
   height: 100%;
+  //object-fit: fill;
   position: absolute;
   //top: 5%;
   //left: 50%;
