--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -222,17 +222,21 @@ body {
   //left: 50%;
 }
 
+// https://stackoverflow.com/questions/1776915/how-can-i-center-an-absolutely-positioned-element-in-a-div
 #alone-text {
   position: absolute;
   top: 25%;
-  left: 25%;
+  left: 50%;
+  transform: translate(-50%, 0);
   z-index: 1;
+  width: 295px;
 }
 
 #alone-searchbar {
   position: absolute;
   top: 30%;
-  left: 25%;
+  left: 50%;
+  transform: translate(-50%, 0);
   z-index: 1;
   width: 295px;
 }
