--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -159,6 +159,7 @@
   top: 10px !important; // todo variable
   left: 10px !important;
   width: 520px !important; // todo ???
+  transform: none !important;
   transition: all 0.5s ease-in-out;
 }
 
