--- a/is-eurail-cheaper/app/globals.scss
+++ b/is-eurail-cheaper/app/globals.scss
@@ -235,6 +235,7 @@ body {
 #alone-searchbar {
   position: absolute;
   top: 30%;
+  //left: 23%;
   left: 50%;
   transform: translate(-50%, 0);
   z-index: 1;
