fade in settings

--- a/is-eurail-cheaper/app/animation.scss
+++ b/is-eurail-cheaper/app/animation.scss
@@ -176,6 +176,10 @@
   animation: fade-in 0.5s;
 }
 
+#settings {
+  animation: fade-in 0.2s;
+}
+
 .fade-out {
   opacity: 0;
   animation: fade-in reverse 0.2s;
