--- a/is-eurail-cheaper/app/css/globals.scss
+++ b/is-eurail-cheaper/app/css/globals.scss
@@ -1,9 +1,9 @@
-@import '../node_modules/bulma/bulma.sass';
+@import '../../node_modules/bulma/bulma';
 
-@import "leaflet/dist/leaflet.css";
+@import "../../node_modules/leaflet/dist/leaflet.css";
 
 
-@import './animation.scss';
+@import 'animation';
 
 //@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
 
