working on settings page

--- a/is-eurail-cheaper/app/css/globals.scss
+++ b/is-eurail-cheaper/app/css/globals.scss
@@ -353,3 +353,11 @@ body {
   opacity: 0.4;
   animation: fade-in-settings 0.2s;
 }
+
+.settings-content {
+  padding: 10px;
+}
+
+#weeks {
+  margin-top: 10px;
+}
