--- a/is-eurail-cheaper/app/css/city.scss
+++ b/is-eurail-cheaper/app/css/city.scss
@@ -27,7 +27,7 @@
   width: 22px;
   height: 18px;
   padding-left: 1px;
-  margin-top: 3px;
+  margin-top: 2px;
   opacity: 0.2;
 }
 
@@ -39,6 +39,7 @@
   margin-left: 4px;
   width: 24px;
   display: inline-block;
+  padding-top: 2px;
 }
 
 .edit-container:hover {
@@ -46,6 +47,28 @@
 }
 
 .edit-container:hover .edit {
+  filter: invert(1);
+}
+
+.trash {
+  width: 22px;
+  height: 18px;
+  padding-left: 1px;
+  margin-top: 3px;
+  opacity: 0.2;
+}
+
+.trash-container {
+  margin-left: 4px;
+  width: 24px;
+  display: inline-block;
+}
+
+.trash-container:hover {
+  background: #ff392b;
+}
+
+.trash-container:hover .trash {
   filter: invert(1);
 }
 
