implement price sharing, i'm going to hope that it works

--- a/is-eurail-cheaper/app/css/globals.scss
+++ b/is-eurail-cheaper/app/css/globals.scss
@@ -10,6 +10,7 @@
 @import 'searchbar';
 @import 'searchbardropdown';
 @import 'tripview';
+@import 'trip';
 
 //@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
 
