--- a/is-eurail-cheaper/app/css/globals.scss
+++ b/is-eurail-cheaper/app/css/globals.scss
@@ -65,10 +65,12 @@ body {
   left: 50%;
   margin-left: -100%;
 
-  padding: 0 5px;
+  padding: 5px;
   border-radius: 5px;
   width: 200%;
-  text-align: center
+  text-align: center;
+  line-height: 15px;
+  font-size: 15px;
 }
 
 .has-tooltip-bottom .tooltip::after {
