fix one of the solutions

--- a/is-eurail-cheaper/app/css/globals.scss
+++ b/is-eurail-cheaper/app/css/globals.scss
@@ -86,7 +86,8 @@ body {
 
 .has-tooltip-bottom {
   position: relative;
-  display: inline-block;
+  //display: inline-block;
+  overflow: visible;
 }
 
 .has-tooltip-bottom:hover .tooltip {
