--- a/is-eurail-cheaper/app/css/picker.scss
+++ b/is-eurail-cheaper/app/css/picker.scss
@@ -1,3 +1,26 @@
+.upper {
+  padding: 1px;
+}
+
+.lower .level, .upper.level, #total .level, #total .content {
+  margin-bottom: 0 !important;
+}
+
+.lower-inner {
+  border-left: 2px solid gray;
+  margin-left: 10px;
+  padding-left: 10px;
+}
+
+.lower-closed {
+  max-height: 0;
+  overflow: hidden;
+}
+
+.lower {
+  height: auto;
+}
+
 .is-loading {
   z-index: 0;
 }
@@ -19,29 +42,6 @@
 .lower-open {
   animation: lower-open 0.3s;
   max-height: 100px;
-}
-
-.upper {
-  padding: 1px;
-}
-
-.lower .level, .upper.level, #total .level, #total .content {
-  margin-bottom: 0 !important;
-}
-
-.lower-inner {
-  border-left: 2px solid gray;
-  margin-left: 10px;
-  padding-left: 10px;
-}
-
-.lower-closed {
-  max-height: 0;
-}
-
-.lower {
-  //overflow: hidden;
-  height: auto;
 }
 
 .price-picker:hover, .link-tag:hover {
