--- a/is-eurail-cheaper/app/css/picker.scss
+++ b/is-eurail-cheaper/app/css/picker.scss
@@ -1,47 +1,9 @@
-.upper {
-  padding: 1px;
+.first {
+  position: relative;
 }
 
-.lower .level, .upper.level, #total .level, #total .content {
-  margin-bottom: 0 !important;
-}
-
-.lower-inner {
-  border-left: 2px solid gray;
-  margin-left: 10px;
-  padding-left: 10px;
-}
-
-.lower-closed {
-  overflow: hidden;
-  max-height: 0;
-}
-
-.lower {
-  height: auto;
-}
-
-.is-loading {
-  z-index: 0;
-}
-
-@keyframes lower-open {
-  from {
-    max-height: 0;
-  }
-
-  to {
-    max-height: 100px !important;
-  }
-}
-
-.lower {
-  transition: max-height 0.3s;
-}
-
-.lower-open {
-  animation: lower-open 0.3s;
-  max-height: 100px;
+.length {
+  width: 51px;
 }
 
 .price-picker:hover, .link-tag:hover {
