--- a/is-eurail-cheaper/app/css/picker.scss
+++ b/is-eurail-cheaper/app/css/picker.scss
@@ -1,11 +1,3 @@
-.first {
-  position: relative;
-}
-
-.length {
-  width: 51px;
-}
-
 .price-picker:hover, .link-tag:hover {
   filter: brightness(85%);
 }
@@ -122,7 +114,7 @@
   border-radius: 0;
 }
 
-.price-picker {
+.price-picker:not(.first) {
   //width: 150px;
   position: absolute;
 }
@@ -140,4 +132,12 @@
   width: 600% !important;
   margin-left: -290% !important;
   z-index: 100;
+}
+
+.first {
+  position: relative;
+}
+
+.length {
+  width: 51px;
 }
