not gonna test this but i hope it works

--- a/is-eurail-cheaper/app/css/picker.scss
+++ b/is-eurail-cheaper/app/css/picker.scss
@@ -141,3 +141,35 @@
 .length {
   width: 51px;
 }
+
+.images {
+  position: relative;
+}
+
+.image {
+  position: absolute;
+}
+
+.image-1-of-1 {
+
+}
+
+.image-1-of-2 {
+  clip-path: polygon(0% 0%, 98% 0%, 0% 98%);
+}
+
+.image-2-of-2 {
+  clip-path: polygon(100% 2%, 100% 100%, 2% 100%);
+}
+
+.image-1-of-3 {
+  clip-path: polygon(0% 0%, 50% 0%, 0% 100%);
+}
+
+.image-2-of-3 {
+  clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+}
+
+.image-3-of-3 {
+  clip-path: polygon(50% 0%, 100% 0%, 100% 100%);
+}
