ok it was very close to working to be fair

--- a/is-eurail-cheaper/app/css/picker.scss
+++ b/is-eurail-cheaper/app/css/picker.scss
@@ -143,10 +143,12 @@
 }
 
 .images {
-  position: relative;
+  position: static;
+  width: 30px; // todo variable
+  height: 30px;
 }
 
-.image {
+.i-image {
   position: absolute;
 }
 
